--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <script src="/script.js" defer></script>
 </head>
 <body>
-  <div class="header"><div>
-  <h1>Test</h1>
+  <div class="header">
+    <div class="items">
+    </div>
+    <div>
 </body>
 </html>
