--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 	<meta property="og:site_name" content="Wynds's Site" />
 	<!--Linking resources-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="./common.js"></script>
-	<link rel="stylesheet" href="./common.css"> </head>
-
+	<script src="./script.js"></script>
+	<link rel="stylesheet" href="./style.css"> 
+</head>
 <body>
-	<div class="welcome"> <strong><h1>Welcome to Wynd's site!</h1></strong> </div>
+	<div class="welcome"> 
+		<strong>
+			<h1>Welcome to Wynd's site!</h1>
+		</strong> 
+	</div>
 	<div class="container">
-		<div class="block" id="1"> </div>
+		<div class="block" id="1">
+		</div>
 	</div>
 </body>
 
