spelled img correctly lol

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Wynd</title>
-	<link rel="icon" href="./ing/favicon.ico">
+	<link rel="icon" href="./img/favicon.ico">
 	<meta name="description" content="This is the website " />
 	<meta property="og:type" content="blog" />
 	<meta property="og:title" content="Wynd's site" />
