--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta property="og:url" content="https://www.wyndryder.net" />
 	<meta property="og:site_name" content="Wynds's Site" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="google-site-verification" content="ym_ZUaSHQFKA7lsT_lXCuhlS1jh17_V_8crbLU6Ctzk" />
 	<!--Linking resources-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
