--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
 	<title>Wynd</title>
-	<link rel="icon" href="./img/favicon.ico">
+	<link rel="icon" href="./img/favicon.svg">
 	<meta name="description" content="This is the website " />
 	<meta property="og:type" content="blog" />
 	<meta property="og:title" content="Wynd's site" />
 	<meta property="og:description" content="stuff" />
-	<meta property="og:image" content="null" />
+	<meta property="og:image" content="./img/favicon.svg" />
 	<meta property="og:url" content="https://www.wyndryder.net" />
 	<meta property="og:site_name" content="Wynds's Site" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,6 +23,17 @@
 <body>
 	<div class="welcome"> 
 		<h1 class="m-2">Welcome to Wynd's site!</h1>
+		<div class="dropdown">
+   		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Options
+  		<span class="caret"></span>
+		</button>
+   		<ul class="dropdown-menu">
+      <li><a href="#">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+    </ul>
+  </div>
+</div>
 	</div>
 </body>
 </html>
