--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
 	<div class="welcome"> 
-		<h1 class="m-2">Welcome to Wynd's site!</h1>
-		<div class="dropdown">
+		<h1 class="m-2 pull-left">Welcome to Wynd's site!</h1>
+		<div class="dropdown pull-left">
    		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Options
   		<span class="caret"></span>
 		</button>
