--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<div class="welcome"> 
-		<h1 class="m-2">Welcome to Wynd's site!</h1>
+		<h1>Welcome to Wynd's site!</h1>
 		<div class="dropdown">
    		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Options
   		<span class="caret"></span>
@@ -34,6 +34,6 @@
     </ul>
   </div>
 </div>
-	</div>
+</div>
 </body>
 </html>
