--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!Doctype HTML>
+<!DOCTYPE HTML>
 <html lang="en">
 
 <head>
@@ -14,26 +14,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="ym_ZUaSHQFKA7lsT_lXCuhlS1jh17_V_8crbLU6Ctzk" />
 	<!--Linking resources-->
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" defer>
 	<script src="./script.js" defer></script>
-	<link rel="stylesheet" href="./style.css" defer> 
-</head>
+	<link rel="stylesheet" href="./style.css" defer> </head>
+
 <body>
-	<div class="welcome"> 
+	<div class="welcome">
 		<h1>Welcome to Wynd's site!</h1>
 		<div class="dropdown">
-   		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Options
-  		<span class="caret"></span>
-		</button>
-   		<ul class="dropdown-menu">
-      <li><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="#">3</a></li>
-    </ul>
-  </div>
-</div>
-</div>
+			<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Options <span class="caret"></span> </button>
+			<ul class="dropdown-menu">
+				<li><a href="#">1</a></li>
+				<li><a href="#">2</a></li>
+				<li><a href="#">3</a></li>
+			</ul>
+		</div>
+	</div>
 </body>
+
 </html>
