--- a/index.html
+++ b/index.html
@@ -19,15 +19,7 @@
 
 <body>
 	<div class="welcome">
-		<h1>Welcome to Wynd's site!</h1>
-		<div class="dropdown">
-			<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Options <span class="caret"></span> </button>
-			<ul class="dropdown-menu">
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-			</ul>
-		</div>
+		<h1>WyndRyder.net</h1>
 	</div>
 </body>
 
