--- a/c/index.html
+++ b/c/index.html
@@ -1,5 +1,8 @@
 <! DOCTYPE HTML >
 <html>
+  <head>
+    <meta http-equiv="refresh" content="2;url=https://www.youtube.com/channel/UCbyueKCU9f0PIUVP1_jEnnQ" />
+  </head>
   <body>
     <a href="https://www.youtube.com/channel/UCbyueKCU9f0PIUVP1_jEnnQ">If not redirected, click here</a>
   </body>
